tests/paczka1/fuzzy1/80596052.err
Error in line 12: IgYwpc4 S383 57,9
Error in line 14: UBO S951 70,3
Error in line 11: zT4ySB9t S951 49,3
Error in line 15: IgYwpc4 A102 71,9
Error in line 18: IgYwpc4 A727 21,7
Error in line 34: IgYwpc4 A102 35,0
